apps/backstage/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
  labels:
    app.kubernetes.io/name: backstage
    app.kubernetes.io/instance: backstage
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backstage
      app.kubernetes.io/instance: backstage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backstage
        app.kubernetes.io/instance: backstage
        app.kubernetes.io/component: frontend
      annotations:
        sidecar.istio.io/inject: "true"
        traffic.sidecar.istio.io/excludeOutboundPorts: "5432"
    spec:
      serviceAccountName: backstage
      securityContext: {}
      containers:
        - name: backstage
          image: harbor.${INTERNAL_DOMAIN}/sentinel/backstage:v2.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7007
          env: []
          volumeMounts:
            - name: app-config
              mountPath: /app/app-config.yaml
              subPath: app-config.yaml
              readOnly: true
          args:
            - node
            - packages/backend
            - --config
            - /app/app-config.yaml
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
          startupProbe:
            tcpSocket:
              port: 7007
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 7007
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 7007
            periodSeconds: 30
      volumes:
        - name: app-config
          configMap:
            name: backstage-app-config
---
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
  labels:
    app.kubernetes.io/name: backstage
    app.kubernetes.io/instance: backstage
spec:
  selector:
    app.kubernetes.io/name: backstage
    app.kubernetes.io/instance: backstage
  ports:
    - name: http
      port: 7007
      targetPort: 7007
