apps/backstage/postgresql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backstage-postgresql
  namespace: backstage
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: backstage
spec:
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: backstage
  ports:
    - port: 5432
      targetPort: 5432
